--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 </head>
 <body>
   <div id="root"></div>
+  <div id="goodbye"></div>
+  <div id="random"></div>
   <script src="https://unpkg.com/react/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
 
   <script src="https://unpkg.com/babel-standalone"></script>
   <script src="index.js" type="text/jsx"></script>
+  <script src="random.js" type="text/jsx"></script>
 </body>
 </html>
