--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <div id="root"></div>
   <div id="goodbye"></div>
   <div id="random"></div>
+  <div id="testing"></div>
   <script src="https://unpkg.com/react/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
 
