--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <div id="goodbye"></div>
   <div id="random"></div>
   <div id="testing"></div>
+  <div id="ternary"></div>
   <script src="https://unpkg.com/react/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
 
   <script src="https://unpkg.com/babel-standalone"></script>
   <script src="index.js" type="text/jsx"></script>
   <script src="random.js" type="text/jsx"></script>
+  <script src="ternary.js" type="text/jsx"></script>
 </body>
 </html>
