adding components in separate files

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
   <div id="root"></div>
   <div id="goodbye"></div>
-  <div id="random"></div>
-  <div id="testing"></div>
-  <div id="ternary"></div>
+  <!-- <div id="random"></div> -->
+  <!-- <div id="testing"></div> -->
   <script src="https://unpkg.com/react/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
 
   <script src="https://unpkg.com/babel-standalone"></script>
-  <script src="index.js" type="text/jsx"></script>
+
   <script src="random.js" type="text/jsx"></script>
   <script src="ternary.js" type="text/jsx"></script>
+  <script src="index.js" type="text/jsx"></script>
 </body>
 </html>
