--- a/properties/index.html
+++ b/properties/index.html
@@ -6,6 +6,14 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <div id="root"></div>
+
+  <script src="https://unpkg.com/react/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
+
+  <script src="https://unpkg.com/babel-standalone"></script>
+
+  <script src="hello.js" type="text/jsx"></script>
+  <script src="index.js" type="text/jsx"></script>
 </body>
 </html>
